Added javascript file and functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- here in code ,anywhere if we write data-xxxxxxxxx, that represent the custom attribute which will used later -->
             <input readonly placeholder="Password" class="display" data-passwordDisplay>
 
-            <button>
+            <button data-copy>
                 <span data-copyMsg></span>
                 <img src="./assests/copy.svg" alt="copy" width="20" height="20">
             </button>
@@ -63,5 +63,6 @@
 
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
